// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/ConfigForm/manifest/uploadFile renders form edit correctly: edit form 1`] = `
Object {
  "LoadingComponent": <Ripple
    borderColor="#ff5d00"
    borderStyle="solid"
    borderWidth="4px"
    height="64px"
    minHeight="80vh"
    width="64px"
  />,
  "baseURL": "https://reveal-stage.smartregister.org/opensrp/rest/",
  "customAlert": [Function],
  "draftFilesUrl": "/files/draft",
  "endpoint": "clientForm",
  "fileNameLabel": "File Name",
  "fileUploadLabel": "Upload files",
  "formData": null,
  "formId": "01",
  "formInitialValues": Object {
    "form": null,
    "form_name": "",
    "form_relation": "",
    "module": "",
  },
  "formNameRequiredLable": "Form name is required",
  "formRequiredLabel": "Form is required",
  "getPayload": [Function],
  "isJsonValidator": true,
  "moduleLabel": "Module",
  "relatedToLabel": "Related to",
  "validatorsUrl": "/json-validators",
}
`;

exports[`containers/pages/ConfigForm/manifest/uploadFile renders form upload correctly: upload form 1`] = `
Object {
  "LoadingComponent": <Ripple
    borderColor="#ff5d00"
    borderStyle="solid"
    borderWidth="4px"
    height="64px"
    minHeight="80vh"
    width="64px"
  />,
  "baseURL": "https://reveal-stage.smartregister.org/opensrp/rest/",
  "customAlert": [Function],
  "draftFilesUrl": "/files/draft",
  "endpoint": "clientForm",
  "fileNameLabel": "File Name",
  "fileUploadLabel": "Upload files",
  "formData": null,
  "formId": null,
  "formInitialValues": Object {
    "form": null,
    "form_name": "",
    "form_relation": "",
    "module": "",
  },
  "formNameRequiredLable": "Form name is required",
  "formRequiredLabel": "Form is required",
  "getPayload": [Function],
  "isJsonValidator": false,
  "moduleLabel": "Module",
  "relatedToLabel": "Related to",
  "validatorsUrl": "/json-validators",
}
`;
